tests/negative/gold/underscore2-test.gold
tests/negative/underscore2-test.toit:9:11: error: Type mismatch. Expected 'string'. Got 'int'
  foo 499 42
          ^~
As check failed: an int (42) is not a string.
  0: foo                       tests/negative/underscore2-test.toit:6:11
  1: main                      tests/negative/underscore2-test.toit:9:3
